Create ingredients list

--- a/recipes/curry-chicken.html
+++ b/recipes/curry-chicken.html
@@ -12,4 +12,12 @@
         <h2>Description</h2>
         <p>Five-ingredient red curry chicken with noodles is easy, quick, and inexpensive to make.
            Sweetened with coconut milk for unbelievable flavor! Top with chopped cilantro, green onions, and red chile peppers if desired.</p>
+        <h4>Ingredients</h4>
+           <ul>
+               <li>2 tablespoons coconut oil</li>
+               <li>500 gram chicken breast halves, cut into small cubes</li>
+               <li>1 can coconut cream</li>
+               <li>1 bottle red Thai curry sauce</li>
+               <li>8 ounce dried rice stick vermicelli noodles</li>
+           </ul>
 </html>
