Add ingredients list

--- a/recipes/fruit-salad.html
+++ b/recipes/fruit-salad.html
@@ -13,5 +13,18 @@
         <p>This is a fantastic light salad, perfect for the dog days of summer. 
            It's gorgeous and delicious! I had it at a wonderful restaurant in Napa, CA and went home to try to duplicate it myself. 
            Have it for lunch or as a beginning to your summer dinner.</p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>2 mangos - peeled, seeded, and diced</li>
+                <li>1 cup reduced fat raspberry vinaigrette salad dressing</li>
+                <li>8 cups mixed torn salad greens</li>    
+                <li>¼ cup chopped cilantro</li>
+                <li>¼ cup sliced red onion</li>
+                <li>½ cup fresh raspberries</li>
+                <li>½ cup fresh blackberries</li>
+                <li>½ cup fresh strawberries, halved</li>
+                <li>½ cup fresh blueberries</li>
+                <li>½ cup toasted hazelnuts</li>
+            </ul>
     </body>
 </html>
