--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/grilled-chicken.html">Grilled Chicken</a>
+        <ul>
+            <li><a href="recipes/curry-chicken.html">Curry Chicken</a></li>
+            <li><a href="recipes/fruit-salad.html">Fruit Salad</a></li>
+        </ul>
     </body>
 </html>
