Add cooking steps

--- a/recipes/fruit-salad.html
+++ b/recipes/fruit-salad.html
@@ -26,5 +26,12 @@
                 <li>½ cup fresh blueberries</li>
                 <li>½ cup toasted hazelnuts</li>
             </ul>
+        <h4>Directions</h4>
+            <ol>
+                <li>Place 1 mango and the raspberry vinaigrette dressing in a blender, and blend until liquefied.</li><p></p>
+                <li>In a bowl, toss the remaining mango, salad greens, cilantro, and onion. 
+                    Drizzle with the dressing mixture. Top each serving with equal amounts of raspberries, blackberries, strawberries, blueberries, and hazelnuts. 
+                    Sprinkle with Parmesan cheese.</li>
+            </ol>
     </body>
 </html>
