Add ingredient list for mojito  drink

--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -12,6 +12,15 @@
         <h2>Description</h2>   
         <p>This is an authentic recipe for mojito. 
            I sized the recipe for one serving, but you can adjust it accordingly and make a pitcher full. 
-           It's a very refreshing drink for hot summer days.</p>  
+           It's a very refreshing drink for hot summer days.</p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>10 fresh mint leaves</li>
+                <li>½ medium lime, cut into 3 wedges, divided</li>
+                <li>2 tablespoons white sugar, or to taste</li>
+                <li>1 cup ice cubes, or as needed</li>
+                <li>1½ fluid ounces white rum</li>
+                <li>½ cup club soda, or as needed</li>
+            </ul>     
     </body>
 </html>
