--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -21,6 +21,16 @@
                 <li>1 cup ice cubes, or as needed</li>
                 <li>1½ fluid ounces white rum</li>
                 <li>½ cup club soda, or as needed</li>
-            </ul>     
+            </ul>  
+        <h4>Directions</h4>
+            <ol>
+                <li>Place mint leaves and 1 lime wedge into a sturdy glass. 
+                    Use a muddler and crush to release mint oils and lime juice.</li><p></p>
+                <li>Add remaining lime wedges and 2 tablespoons sugar, and muddle again to release the lime juice. 
+                    Do not strain the mixture.</li><p></p>    
+                <li>Fill the glass almost to the top with ice. 
+                    Pour in rum and fill the glass with club soda.</li><p></p>
+                <li>Stir, taste, and add more sugar if desired.</li><p></p>
+            </ol>  
     </body>
 </html>
