--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/curry-chicken.html">Curry Chicken</a></li>
             <li><a href="recipes/fruit-salad.html">Fruit Salad</a></li>
+            <li><a href="recipes/mojito.html">Mojito Drink</a></li>
         </ul>
     </body>
 </html>
