Add image for the main page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://food.unl.edu/newsletters/images/mise-en-plase.jpg" 
+             width="800" alt="A wooden table full of fresh ingredient">
         <ul>
             <li><a href="recipes/curry-chicken.html">Curry Chicken</a></li>
             <li><a href="recipes/fruit-salad.html">Fruit Salad</a></li>
