Add back to home option

--- a/recipes/curry-chicken.html
+++ b/recipes/curry-chicken.html
@@ -10,8 +10,9 @@
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3949345.jpg&w=959&h=959&c=sc&poi=face&q=60" 
              width="600" height="600" alt="Spicy Red Curry Chicken">
         <h2>Description</h2>
-        <p>Five-ingredient red curry chicken with noodles is easy, quick, and inexpensive to make.
-           Sweetened with coconut milk for unbelievable flavor! Top with chopped cilantro, green onions, and red chile peppers if desired.</p>
+        <p><strong>Five-ingredient red curry chicken</strong> with noodles is easy, quick, and inexpensive to make.
+           Sweetened with coconut milk for unbelievable flavor! 
+           Top with chopped cilantro, green onions, and red chile peppers if desired.</p>
         <h4>Ingredients</h4>
             <ul>
                 <li>2 tablespoons coconut oil</li>
@@ -20,11 +21,17 @@
                 <li>1 bottle red Thai curry sauce</li>
                 <li>8 ounce dried rice stick vermicelli noodles</li>
             </ul>
-        <h3>Cooking Steps</h3>
+        <h4>Cooking Steps</h4>
             <ol>
-                <li>Heat oil in a large skillet on high heat. Add chicken cubes; cook until browned, about 2 minutes per side. Reduce heat to medium-high and add coconut cream and curry sauce. Cook until chicken is no longer pink in the center and the juices run clear, about 5 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
-                <li>Fill a large pot with lightly salted water and bring to a rolling boil; stir in vermicelli pasta and return to a boil. Cook pasta uncovered, stirring occasionally, until the pasta is tender yet firm to the bite, 4 to 5 minutes. Drain.</li>
-                <li>Reduce skillet heat to simmer. Add the noodles and let simmer until flavors are absorbed, about 5 minutes. Divide chicken and noodles among individual serving bowls.</li>
+                <li>Heat oil in a large skillet on high heat. Add chicken cubes; cook until browned, about 2 minutes per side. 
+                    Reduce heat to medium-high and add coconut cream and curry sauce. 
+                    Cook until chicken is no longer pink in the center and the juices run clear, about 5 minutes. 
+                    An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li><p></p>
+                <li>Fill a large pot with lightly salted water and bring to a rolling boil; stir in vermicelli pasta and return to a boil. 
+                    Cook pasta uncovered, stirring occasionally, until the pasta is tender yet firm to the bite, 4 to 5 minutes. Drain.</li><p></p>
+                <li>Reduce skillet heat to simmer. Add the noodles and let simmer until flavors are absorbed, about 5 minutes. 
+                    Divide chicken and noodles among individual serving bowls.</li><p></p>
             </ol>
+        <a href="../index.html">Back to Home</a>
     </body>
 </html>
