Add back to home option

--- a/recipes/fruit-salad.html
+++ b/recipes/fruit-salad.html
@@ -33,5 +33,6 @@
                     Drizzle with the dressing mixture. Top each serving with equal amounts of raspberries, blackberries, strawberries, blueberries, and hazelnuts. 
                     Sprinkle with Parmesan cheese.</li>
             </ol>
+        <a href="../index.html">Back to Home</a>
     </body>
 </html>
