--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -32,5 +32,6 @@
                     Pour in rum and fill the glass with club soda.</li><p></p>
                 <li>Stir, taste, and add more sugar if desired.</li><p></p>
             </ol>  
+        <a href="../index.html">Back to Home</a>
     </body>
 </html>
